correction article alignement

--- a/style.css
+++ b/style.css
@@ -125,7 +125,8 @@ header .navbar ul {
 
 
 #header-ban {
-    background-color: rgb(61, 18, 110); 
+    /* background-color: rgb(61, 18, 110);  */
+    background: radial-gradient(#54017a, #000000);
     padding: 0;
 }
 
@@ -197,8 +198,12 @@ header .navbar ul {
 /* ARTICLE */
 
 
-.card {
+#article .card {
     padding: 15px;
+}
+
+#article .card-title {
+    height: 75px;
 }
 
 .pic-legend {
@@ -236,14 +241,15 @@ header .navbar ul {
 
 .bloc-article{
     height:325px;
+    max-height: 325px;
 }
 
 .bloc-article >p{
     height : 50%;
 }
 .card-body{
-        padding-top : 15%;
-        height : 80%;
+    padding-top : 15%;
+    height : 80%;
 }
 .card-body p {
     overflow: hidden;
